[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]

[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="ModelRoot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 9)
current = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.965926, -0.258819, 0, 0.183013, 0.683013, -0.707107, 0.183013, 0.683013, 0.707107, 0, 4, 0)
light_energy = 2.0

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="InfoPanel" type="Panel" parent="HUD"]
offset_left = 16.0
offset_top = 16.0
offset_right = 820.0
offset_bottom = 212.0

[node name="InfoLabel" type="Label" parent="HUD/InfoPanel"]
offset_left = 12.0
offset_top = 12.0
offset_right = 792.0
offset_bottom = 184.0
autowrap_mode = 3
